--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  flutter_bloc: ^9.1.1
   dio: ^5.8.0+1
-  flutter_native_splash: ^2.4.4
-  
-  
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
