--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
   http: ^1.4.0
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
