--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   dio: ^5.8.0+1
   http: ^1.4.0
   flutter_riverpod: ^2.6.1
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.17.9
 
 dev_dependencies:
   flutter_test:
